<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".SignUpActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:orientation="horizontal">

        <!--   אפשר לעשות משתנה שיתעדכן ליוסר ניים ויהפוך להיות שלום בן במקום שלום אורח.    -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Hello, Guest"
            android:textColor="#000000"
            android:textSize="25sp" />
    </LinearLayout>


    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="Enter your username:"
                android:textColor="#000000"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/inputMailLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Username" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="Enter your mail:"
                android:textColor="#000000"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/inputMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Mail" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="Enter your password:"
                android:textColor="#000000"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/inputPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Password"
                android:inputType="textPassword" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="Repeat your password:"
                android:textColor="#000000"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/inputPass2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Password"
                android:inputType="textPassword" />

        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="You are a:"
                android:textColor="#000000"
                android:textSize="15sp" />

            <RadioGroup
                android:id="@+id/radio"
                android:orientation="horizontal">


                <RadioButton
                    android:id="@+id/child"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Child" />

                <RadioButton
                    android:id="@+id/parent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Parent" />

            </RadioGroup>

        </TableRow>

        <TableRow
            android:id="@+id/childMTR"
            android:visibility="invisible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="Enter your child's mail:"
                android:textColor="#000000"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/inputChildMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Mail" />
        </TableRow>

    </TableLayout>


    <Button
        android:id="@+id/btnClear"
        android:layout_height="wrap_content"

    <Button
        android:id="@+id/btnSubmit"
        android:layout_height="wrap_content"
        android:onClick="onClickSubmit"

</LinearLayout>